Java 10 Migration